<resources>
    <string name="app_name">Test Memory Card</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!--Menu-->
    <string name="start_game">Start Game</string>
    <string name="get_json">Get Json</string>
    <string name="exit">exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rounds_s">Rounds: %s</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="restart">restart</string>
    <string name="rounds_spent_s">Rounds spent: %s</string>
    <string name="seconds_spent_s">Seconds spent: %s</string>
    <string name="get_data">Get Data</string>
    <string name="country_s">Country: %s</string>
    <string name="city_s">City: %s</string>
    <string name="time_zone_s">Time zone: %s</string>
</resources>