<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_vert"
    tools:context=".activity.mainActivityFragments.FragmentEndGame">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="tvRoundsSpent, tvTimeSpent"
        app:flow_verticalGap="@dimen/vertical_gap"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_to_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRoundsSpent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/frame_rounded_light_to_mid"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:text="@string/rounds_spent_s"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_mid" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTimeSpent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/frame_rounded_light_to_mid"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:text="@string/seconds_spent_s"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_mid" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back_to_menu"
        android:layout_width="@dimen/btn_with"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@drawable/frame_rounded_light_to_mid"
        android:text="@string/back_to_menu"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_mid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>