<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_vert"
    tools:context=".activity.mainActivityFragments.FragmentMainMenu">


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="btnStartGame, btn_get_json, btnExit"
        app:flow_verticalGap="@dimen/vertical_gap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.constraintlayout.helper.widget.Flow>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartGame"
        android:layout_width="@dimen/btn_with"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/frame_rounded_light_to_mid"
        android:padding="@dimen/small_padding"
        android:text="@string/start_game"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_mid"
        app:layout_constraintHeight_percent="0.10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_json"
        android:layout_width="@dimen/btn_with"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/frame_rounded_light_to_mid"
        android:padding="@dimen/small_padding"
        android:text="@string/get_json"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_mid"
        app:layout_constraintHeight_percent="0.10"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExit"
        android:layout_width="@dimen/btn_with"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/frame_rounded_light_to_mid"
        android:padding="@dimen/small_padding"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_mid"
        app:layout_constraintHeight_percent="0.10"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>